--- a/tests/tools/mock-agent/scenarios/realistic_development_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/realistic_development_scenario.yaml
@@ -2,265 +2,182 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: realistic_development_scenario
-initialPrompt: 'Add proper division by zero handling to the calculator.py file'
+initialPrompt: Add proper division by zero handling to the calculator.py file
 repo:
   init: true
   files:
-    - path: 'README.md'
-      contents: |
-        # Calculator App
+    - path: README.md
+      contents: '# Calculator App
+
 
         A simple calculator application.
-    - path: 'calculator.py'
-      contents: |
-        def add(a, b):
-            return a + b
 
-        def subtract(a, b):
-            return a - b
-
-        def multiply(a, b):
-            return a * b
-
-        def divide(a, b):
-            return a / b
-
-        if __name__ == "__main__":
-            print("Calculator app")
+        '
+    - path: calculator.py
+      contents: "def add(a, b):\n    return a + b\n\ndef subtract(a, b):\n    return\
+        \ a - b\n\ndef multiply(a, b):\n    return a * b\n\ndef divide(a, b):\n    return\
+        \ a / b\n\nif __name__ == \"__main__\":\n    print(\"Calculator app\")\n"
 timeline:
-  # Agent starts working on the task
   - llmResponse:
       - think:
-          - [
-              2000,
-              'User wants me to add division by zero handling to the calculator. Let me examine the current code first.',
-            ]
-          - [1500, 'Looking at the calculator.py file to understand the current implementation.']
+          - content: User wants me to add division by zero handling to the calculator. Let
+              me examine the current code first.
+            relativeTime: 2000
+          - content: Looking at the calculator.py file to understand the current implementation.
+            relativeTime: 1500
       - assistant:
-          - [500, "I'll start by examining the current calculator implementation."]
-
-  # Agent reads the current code
+          - content: I'll start by examining the current calculator implementation.
+            relativeTime: 500
   - agentToolUse:
-      toolName: 'readFile'
+      toolName: readFile
       args:
-        path: 'calculator.py'
-      result: 'File read successfully'
-      status: 'ok'
-
-  # Agent analyzes the code and plans the fix
+        path: calculator.py
+      result: File read successfully
+      status: ok
   - llmResponse:
       - think:
-          - [
-              2500,
-              "I can see the calculator has basic arithmetic operations but the divide function doesn't handle division by zero. I need to add proper error handling.",
-            ]
-          - [1200, "I'll modify the divide function to raise a ValueError when dividing by zero."]
+          - content: I can see the calculator has basic arithmetic operations but the divide
+              function doesn't handle division by zero. I need to add proper error handling.
+            relativeTime: 2500
+          - content: I'll modify the divide function to raise a ValueError when dividing
+              by zero.
+            relativeTime: 1200
       - assistant:
-          - [
-              1000,
-              "I can see the calculator code. The divide function currently performs direct division without checking for division by zero. I'll implement proper error handling.",
-            ]
-
-  # Agent implements the fix
+          - content: I can see the calculator code. The divide function currently performs
+              direct division without checking for division by zero. I'll implement proper
+              error handling.
+            relativeTime: 1000
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: 'cd /workspace && python -c "import calculator; print(''Testing current divide function...''); calculator.divide(10, 2); print(''10/2 ='', calculator.divide(10, 2))"'
-        cwd: '.'
-      result: '10/2 = 5.0'
-      status: 'ok'
-
-  # Agent tests division by zero and encounters the error, then asks user for guidance
+        command: cd /workspace && python -c "import calculator; print('Testing current
+          divide function...'); calculator.divide(10, 2); print('10/2 =', calculator.divide(10,
+          2))"
+        cwd: .
+      result: 10/2 = 5.0
+      status: ok
   - llmResponse:
       - think:
-          - [
-              3000,
-              'Good, the basic functionality works. Now I need to test the division by zero case and add proper error handling. Let me first try dividing by zero to see what happens.',
-            ]
-          - [
-              1500,
-              'Actually, let me think about this more carefully. The user wants me to add division by zero handling. I should first test what happens when we try to divide by zero with the current code.',
-            ]
+          - content: Good, the basic functionality works. Now I need to test the division
+              by zero case and add proper error handling. Let me first try dividing by zero
+              to see what happens.
+            relativeTime: 3000
+          - content: Actually, let me think about this more carefully. The user wants me
+              to add division by zero handling. I should first test what happens when we
+              try to divide by zero with the current code.
+            relativeTime: 1500
       - assistant:
-          - [
-              2000,
-              'I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function.',
-            ]
-          - [
-              2500,
-              'What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?',
-            ]
-
-  # Agent tests division by zero and encounters the error
+          - content: I see that dividing by zero causes a ZeroDivisionError. I need to add
+              proper error handling to the divide function.
+            relativeTime: 2000
+          - content: What approach would you like me to take for handling division by zero?
+              Should I raise a custom ValueError, return None, or handle it differently?
+            relativeTime: 2500
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: 'cd /workspace && python -c "import calculator; calculator.divide(10, 0)" 2>&1 || echo ''Division by zero caused an error'''
-        cwd: '.'
+        command: cd /workspace && python -c "import calculator; calculator.divide(10,
+          0)" 2>&1 || echo 'Division by zero caused an error'
+        cwd: .
       result: 'Traceback (most recent call last): ZeroDivisionError: division by zero'
-      status: 'ok'
-
-  # Agent realizes the issue and asks user for guidance
-  - assistant:
-      - [
-          2000,
-          'I see that dividing by zero causes a ZeroDivisionError. I need to add proper error handling to the divide function.',
-        ]
-      - [
-          2500,
-          'What approach would you like me to take for handling division by zero? Should I raise a custom ValueError, return None, or handle it differently?',
-        ]
-
-  # User provides helpful tip (simulated as userInputs)
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: I see that dividing by zero causes a ZeroDivisionError. I need to add
+              proper error handling to the divide function.
+            relativeTime: 2000
+          - content: What approach would you like me to take for handling division by zero?
+              Should I raise a custom ValueError, return None, or handle it differently?
+            relativeTime: 4500
   - userInputs:
-      - [1000, 'Please raise a ValueError with a clear message when dividing by zero.']
-    target: 'tui'
-
-  # Agent acknowledges the user's input and implements the fix
+      - input: Please raise a ValueError with a clear message when dividing by zero.
+        relativeTime: 1000
+    target: tui
   - llmResponse:
       - think:
-          - [
-              1800,
-              "The user wants me to raise a ValueError with a clear message for division by zero. That's a good approach.",
-            ]
-          - [
-              800,
-              "Now I'll implement the fix by modifying the divide function to check for division by zero before performing the division.",
-            ]
+          - content: The user wants me to raise a ValueError with a clear message for division
+              by zero. That's a good approach.
+            relativeTime: 1800
+          - content: Now I'll implement the fix by modifying the divide function to check
+              for division by zero before performing the division.
+            relativeTime: 800
       - assistant:
-          - [
-              1000,
-              "Got it! I'll implement the division by zero check by raising a ValueError with a clear message.",
-            ]
-
-  # Agent implements the fix
+          - content: Got it! I'll implement the division by zero check by raising a ValueError
+              with a clear message.
+            relativeTime: 1000
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: |
-          cd /workspace && python -c "
-          # First, let's modify the divide function to handle division by zero
-          import re
-
-          with open('calculator.py', 'r') as f:
-              content = f.read()
-
-          # Replace the divide function
-          new_divide = '''def divide(a, b):
-              if b == 0:
-                  raise ValueError(\"Cannot divide by zero\")
-              return a / b'''
-
-          # Use regex to replace the function
-          pattern = r'def divide\(a, b\):\s*return a / b'
-          content = re.sub(pattern, new_divide, content, flags=re.MULTILINE | re.DOTALL)
-
-          with open('calculator.py', 'w') as f:
-              f.write(content)
-
-          print('Modified divide function to handle division by zero')
-          "
-        cwd: '.'
-      result: 'Modified divide function to handle division by zero'
-      status: 'ok'
-
-  # Agent tests the fix
+        command: "cd /workspace && python -c \"\n# First, let's modify the divide function\
+          \ to handle division by zero\nimport re\n\nwith open('calculator.py', 'r')\
+          \ as f:\n    content = f.read()\n\n# Replace the divide function\nnew_divide\
+          \ = '''def divide(a, b):\n    if b == 0:\n        raise ValueError(\\\"Cannot\
+          \ divide by zero\\\")\n    return a / b'''\n\n# Use regex to replace the function\n\
+          pattern = r'def divide\\(a, b\\):\\s*return a / b'\ncontent = re.sub(pattern,\
+          \ new_divide, content, flags=re.MULTILINE | re.DOTALL)\n\nwith open('calculator.py',\
+          \ 'w') as f:\n    f.write(content)\n\nprint('Modified divide function to handle\
+          \ division by zero')\n\"\n"
+        cwd: .
+      result: Modified divide function to handle division by zero
+      status: ok
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: 'cd /workspace && python -c "import calculator; print(''Testing normal division:''); print(''10/2 ='', calculator.divide(10, 2)); print(''Testing division by zero:''); calculator.divide(10, 0)" 2>&1 || echo ''Error caught successfully'''
-        cwd: '.'
-      result: 'Testing normal division: 10/2 = 5.0 Testing division by zero: Traceback (most recent call last): ValueError: Cannot divide by zero'
-      status: 'ok'
-
-  # Agent reads the updated file to verify the changes
+        command: cd /workspace && python -c "import calculator; print('Testing normal
+          division:'); print('10/2 =', calculator.divide(10, 2)); print('Testing division
+          by zero:'); calculator.divide(10, 0)" 2>&1 || echo 'Error caught successfully'
+        cwd: .
+      result: 'Testing normal division: 10/2 = 5.0 Testing division by zero: Traceback
+        (most recent call last): ValueError: Cannot divide by zero'
+      status: ok
   - agentToolUse:
-      toolName: 'readFile'
+      toolName: readFile
       args:
-        path: 'calculator.py'
-      result: 'File read successfully'
-      status: 'ok'
-
-  # Agent runs comprehensive tests
+        path: calculator.py
+      result: File read successfully
+      status: ok
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: |
-          cd /workspace && python -c "
-          import calculator
-
-          # Test all functions
-          print('Testing all calculator functions...')
-          print('add(5, 3) =', calculator.add(5, 3))
-          print('subtract(10, 4) =', calculator.subtract(10, 4))
-          print('multiply(6, 7) =', calculator.multiply(6, 7))
-          print('divide(15, 3) =', calculator.divide(15, 3))
-
-          # Test edge cases
-          print('divide(10, 2) =', calculator.divide(10, 2))
-
-          # Test error case
-          try:
-              calculator.divide(10, 0)
-          except ValueError as e:
-              print('Error handling works:', str(e))
-
-          print('All tests passed!')
-          "
-        cwd: '.'
-      result: 'Testing all calculator functions... add(5, 3) = 8 subtract(10, 4) = 6 multiply(6, 7) = 42 divide(15, 3) = 5.0 divide(10, 2) = 5.0 Error handling works: Cannot divide by zero All tests passed!'
-      status: 'ok'
-
-  # Agent creates a proper test file
+        command: "cd /workspace && python -c \"\nimport calculator\n\n# Test all functions\n\
+          print('Testing all calculator functions...')\nprint('add(5, 3) =', calculator.add(5,\
+          \ 3))\nprint('subtract(10, 4) =', calculator.subtract(10, 4))\nprint('multiply(6,\
+          \ 7) =', calculator.multiply(6, 7))\nprint('divide(15, 3) =', calculator.divide(15,\
+          \ 3))\n\n# Test edge cases\nprint('divide(10, 2) =', calculator.divide(10,\
+          \ 2))\n\n# Test error case\ntry:\n    calculator.divide(10, 0)\nexcept ValueError\
+          \ as e:\n    print('Error handling works:', str(e))\n\nprint('All tests passed!')\n\
+          \"\n"
+        cwd: .
+      result: 'Testing all calculator functions... add(5, 3) = 8 subtract(10, 4) = 6
+        multiply(6, 7) = 42 divide(15, 3) = 5.0 divide(10, 2) = 5.0 Error handling works:
+        Cannot divide by zero All tests passed!'
+      status: ok
   - agentToolUse:
-      toolName: 'writeFile'
+      toolName: writeFile
       args:
-        path: 'test_calculator.py'
-        text: |
-          import calculator
-
-          def test_add():
-              assert calculator.add(2, 3) == 5
-              assert calculator.add(-1, 1) == 0
-
-          def test_subtract():
-              assert calculator.subtract(5, 3) == 2
-              assert calculator.subtract(10, 15) == -5
-
-          def test_multiply():
-              assert calculator.multiply(4, 5) == 20
-              assert calculator.multiply(-2, 3) == -6
-
-          def test_divide():
-              assert calculator.divide(10, 2) == 5.0
-              assert calculator.divide(15, 3) == 5.0
-
-          def test_divide_by_zero():
-              try:
-                  calculator.divide(10, 0)
-                  assert False, "Should have raised ValueError"
-              except ValueError as e:
-                  assert str(e) == "Cannot divide by zero"
-
-          if __name__ == "__main__":
-              test_add()
-              test_subtract()
-              test_multiply()
-              test_divide()
-              test_divide_by_zero()
-              print("All tests passed!")
-      result: 'Test file created'
-      status: 'ok'
-
-  # Agent runs the test suite
+        path: test_calculator.py
+        text: "import calculator\n\ndef test_add():\n    assert calculator.add(2, 3)\
+          \ == 5\n    assert calculator.add(-1, 1) == 0\n\ndef test_subtract():\n  \
+          \  assert calculator.subtract(5, 3) == 2\n    assert calculator.subtract(10,\
+          \ 15) == -5\n\ndef test_multiply():\n    assert calculator.multiply(4, 5)\
+          \ == 20\n    assert calculator.multiply(-2, 3) == -6\n\ndef test_divide():\n\
+          \    assert calculator.divide(10, 2) == 5.0\n    assert calculator.divide(15,\
+          \ 3) == 5.0\n\ndef test_divide_by_zero():\n    try:\n        calculator.divide(10,\
+          \ 0)\n        assert False, \"Should have raised ValueError\"\n    except\
+          \ ValueError as e:\n        assert str(e) == \"Cannot divide by zero\"\n\n\
+          if __name__ == \"__main__\":\n    test_add()\n    test_subtract()\n    test_multiply()\n\
+          \    test_divide()\n    test_divide_by_zero()\n    print(\"All tests passed!\"\
+          )\n"
+      result: Test file created
+      status: ok
   - agentToolUse:
-      toolName: 'runCmd'
+      toolName: runCmd
       args:
-        command: 'cd /workspace && python test_calculator.py'
-        cwd: '.'
-      result: 'All tests passed!'
-      status: 'ok'
-
-  # Keep the session open for interactive use
-  - assistant:
-      - [1000, "Great! I've completed the task. What would you like to do next?"]
+        command: cd /workspace && python test_calculator.py
+        cwd: .
+      result: All tests passed!
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: Great! I've completed the task. What would you like to do next?
+            relativeTime: 1000
