--- a/tests/tools/mock-agent/scenarios/basic_timeline_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/basic_timeline_scenario.yaml
@@ -2,17 +2,19 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: basic_timeline_scenario
-initialPrompt: "Create a test.py file that prints 'Hello from basic timeline scenario'"
+initialPrompt: Create a test.py file that prints 'Hello from basic timeline scenario'
 repo:
   init: true
 timeline:
   - llmResponse:
       - think:
-          - [500, 'Processing request for basic_timeline_scenario']
+          - content: Processing request for basic_timeline_scenario
+            relativeTime: 500
       - assistant:
-          - [300, 'Completed basic_timeline_scenario scenario']
+          - content: Completed basic_timeline_scenario scenario
+            relativeTime: 300
 expect:
   exitCode: 0
   artifacts:
-    - type: 'taskFile'
-      pattern: 'test.py'
+    - type: taskFile
+      pattern: test.py
