--- a/tests/tools/mock-agent/scenarios/recorder_error_handling.yaml
+++ b/tests/tools/mock-agent/scenarios/recorder_error_handling.yaml
@@ -2,52 +2,58 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: recorder_error_handling
-initialPrompt: 'Test error handling in the recorder'
-description: 'Test error handling in recording and IPC communication'
+initialPrompt: Test error handling in the recorder
+description: Test error handling in recording and IPC communication
 repo:
   init: true
 timeline:
-  - think:
-      - [200, 'Testing error handling and recovery in the recording system.']
+  - llmResponse:
+      - think:
+          - content: Testing error handling and recovery in the recording system.
+            relativeTime: 200
   - agentToolUse:
-      toolName: 'writeFile'
+      toolName: writeFile
       args:
-        path: 'valid.txt'
-        text: 'This operation should succeed.'
-      result: 'File created'
-      status: 'ok'
-  - assistant:
-      - [100, 'First successful operation.']
+        path: valid.txt
+        text: This operation should succeed.
+      result: File created
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: First successful operation.
+            relativeTime: 100
   - agentToolUse:
-      toolName: 'writeFile'
+      toolName: writeFile
       args:
-        path: 'another.txt'
-        text: 'This should also work even if IPC has issues.'
-      result: 'File created'
-      status: 'ok'
-  - assistant:
-      - [100, 'Second operation - IPC issues should not block file operations.']
+        path: another.txt
+        text: This should also work even if IPC has issues.
+      result: File created
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: Second operation - IPC issues should not block file operations.
+            relativeTime: 100
   - agentToolUse:
-      toolName: 'writeFile'
+      toolName: writeFile
       args:
-        path: 'recovery.txt'
-        text: 'System should recover gracefully from any transient errors.'
-      result: 'File created'
-      status: 'ok'
-  - assistant:
-      - [
-          150,
-          'Final operation verifies system resilience. The recording should continue even if individual IPC notifications fail.',
-        ]
+        path: recovery.txt
+        text: System should recover gracefully from any transient errors.
+      result: File created
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: Final operation verifies system resilience. The recording should continue
+              even if individual IPC notifications fail.
+            relativeTime: 150
 expect:
   exitCode: 0
   artifacts:
-    - type: 'taskFile'
-      pattern: 'valid.txt'
-    - type: 'taskFile'
-      pattern: 'another.txt'
-    - type: 'taskFile'
-      pattern: 'recovery.txt'
+    - type: taskFile
+      pattern: valid.txt
+    - type: taskFile
+      pattern: another.txt
+    - type: taskFile
+      pattern: recovery.txt
   error_tolerance:
-    ipc_failures: 'non_blocking'
-    recording_continuity: 'maintained'
+    ipc_failures: non_blocking
+    recording_continuity: maintained
