--- a/tests/tools/mock-agent/scenarios/task_multi_agent_follow.yaml
+++ b/tests/tools/mock-agent/scenarios/task_multi_agent_follow.yaml
@@ -2,7 +2,11 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: task_multi_agent_follow
-tags: ['cli', 'task', 'multi-agent', 'follow']
+tags:
+  - cli
+  - task
+  - multi-agent
+  - follow
 repo:
   init: true
 timeline:
@@ -12,7 +16,7 @@ timeline:
         - create
         - multi-demo
         - --prompt
-        - 'Coordinate multi-agent test'
+        - Coordinate multi-agent test
         - --agent
         - claude
         - --agent
@@ -29,7 +33,7 @@ timeline:
         - 'false'
       expect:
         exitCode: 0
-        stdoutContains: 'Follow requested'
+        stdoutContains: Follow requested
   - assertGit:
       branch: multi-demo
       exists: true
@@ -37,12 +41,14 @@ timeline:
       commitCount: 1
   - userCommand:
       program: git
-      args: ['checkout', 'multi-demo']
+      args:
+        - checkout
+        - multi-demo
       expect:
         exitCode: 0
         fs:
           exists:
-            - '.agents/tasks/multi-demo'
+            - .agents/tasks/multi-demo
           contains:
-            - path: '.agents/tasks/multi-demo'
-              substring: 'Coordinate multi-agent test'
+            - path: .agents/tasks/multi-demo
+              substring: Coordinate multi-agent test
