--- a/tests/tools/mock-agent/scenarios/test_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/test_scenario.yaml
@@ -2,23 +2,27 @@
 # SPDX-License-Identifier: AGPL-3.0-only
 
 name: test_scenario
-initialPrompt: 'Create a test file for the test scenario'
+initialPrompt: Create a test file for the test scenario
 repo:
   init: true
 timeline:
-  - think:
-      - [500, 'Processing request for test_scenario']
+  - llmResponse:
+      - think:
+          - content: Processing request for test_scenario
+            relativeTime: 500
   - agentToolUse:
-      toolName: 'writeFile'
+      toolName: writeFile
       args:
-        path: 'test.txt'
-        text: 'Test content for test_scenario'
-      result: 'File created'
-      status: 'ok'
-  - assistant:
-      - [300, 'Completed test_scenario scenario']
+        path: test.txt
+        text: Test content for test_scenario
+      result: File created
+      status: ok
+  - llmResponse:
+      - assistant:
+          - content: Completed test_scenario scenario
+            relativeTime: 300
 expect:
   exitCode: 0
   artifacts:
-    - type: 'taskFile'
-      pattern: 'test.txt'
+    - type: taskFile
+      pattern: test.txt
